<resources>
    <string name="app_name">Sudoku</string>
    <string name="title_activity_main">Sudoku</string>

    <!--main page trophy-->
    <string name="text_trophy_play">PLAY</string>


    <!--main page home-->
    <string name="text_new_game_home">NEW GAME</string>
    <string name="text_resume_game">"Resume game</string>
    <string name="text_rate_app">Rate our app</string>



    <!--dialog game won -->
    <string name="title_game_completed">Game Completed</string>
    <string name="description_game_completed">Congratulations!!!\nyou have won the game.</string>
    <string name="text_rate_us">Rate our App</string>
    <string name="text_go_to_main">Back to main Page</string>

    <!--dialog game over-->
    <string name="title_game_over">Game Over</string>
    <string name="description_game_over">You have made three mistakes and lost this game.</string>
    <string name="text_second_chance">Second Chance</string>
    <string name="text_new_game_dialog">NEW GAME</string>

    <!-- stats layout-->
    <!---main-->
    <string name="title_stats_games">Games</string>
    <string name="title_stats_time">Time</string>
    <string name="title_stats_score">Scores</string>
    <string name="title_stats_streaks">Streaks</string>
    <string name="text_button_reset_stats">RESET STATISTICS</string>

    <!--streak-->
    <string name="current_win_streak">Current Win Streak</string>
    <string name="best_win_streak">Best Win Streak</string>
    <string name="wins_with_no_mistakes">Wins With No Mistakes</string>

    <!--score-->
    <string name="best_score">Best Score</string>
    <string name="average_score">Average Score</string>

    <!--games-->
    <string name="games_started">Games Started</string>
    <string name="games_won">Games Won</string>
    <string name="win_rate">Win Rate</string>
    <string name="win_rate_this_week">Win Rate This Week</string>

    <!--time-->
    <string name="average_time">Average Time</string>
    <string name="best_time">Best Time</string>



    <!--Game difficulty-->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="challenge">Challenge</string>

    <!--mistakes-->
    <string name="mistakes">Mistakes:%1$d/3</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="share_pref_title">Share</string>
    <string name="rate_us_pref_title">Rate Us</string>
    <string name="privacy_policy_pref_title">Privacy Policy</string>
    <string name="about_us_pref_title">About Us</string>
    <string name="sound_pref_title">Sound Effects</string>

    <!--setting summary-->
    <string name="share_summary">Share Sudoku with your friends and family</string>
    <string name="rate_summary">Tell us what you think about Sudoku</string>
    <string name="about_summary">Version 1.0</string>
    <string name="privacy_summary">Read our Privacy Policy</string>
    <string name="sound_summary">"Disable or Enable Sound Effects</string>

    <!--strings -->
    <string name="market_error">Couldn\'t launch market</string>
    <string name="title_activity_help">How To Play</string>
    <string name="help_text">
        "Sudoku is a puzzle game in which you have to fill a 9 × 9 grid with digits so"
        "that each column, each row, and each of the nine 3 × 3 squares that compose the grid"
        "contain all of the digits from 1 to 9."
        "The puzzle setter provides a partially completed grid"
        "which has one solution.\n\n"

        "You can use notes to make guesses."
        "You can use hints to solve difficult parts of the puzzle.\n"
    </string>
    <string name="action_settings">Settings</string>

    <!--help_activity-->
    <string name="menu_help">How to play</string>

</resources>
