<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:layout_margin="10dp"
    android:background="@drawable/shadow_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_image"
            android:padding="@dimen/padding_game_layout_image"
            android:src="@drawable/ic_sudoku_icon"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:gravity="center|start"
            android:textColor="?attr/colorMainPageText"
            android:text="@string/games_started"
            />
        <TextView
            android:id="@+id/games_started_stat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:gravity="end|center"
            android:text="0"
            android:textColor="?attr/colorMainPageText"
            android:textStyle="bold"
            android:padding="@dimen/padding_game_layout_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_image"
            android:padding="@dimen/padding_game_layout_image"
            android:src="@drawable/ic_crown"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:textColor="?attr/colorMainPageText"
            android:gravity="center|start"
            android:text="@string/games_won"
            />
        <TextView
            android:id="@+id/games_won_stat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:textColor="?attr/colorMainPageText"
            android:gravity="end|center"
            android:textStyle="bold"
            android:padding="@dimen/padding_game_layout_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_image"
            android:padding="@dimen/padding_game_layout_image"
            android:src="@drawable/ic_flag_waving"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:textColor="?attr/colorMainPageText"
            android:gravity="center|start"
            android:text="@string/win_rate"
            />
        <TextView
            android:id="@+id/win_rate_stat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:gravity="end|center"
            android:textColor="?attr/colorMainPageText"
            android:textStyle="bold"
            android:padding="@dimen/padding_game_layout_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_image"
            android:padding="@dimen/padding_game_layout_image"
            android:src="@drawable/ic_bar_chart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:textColor="?attr/colorMainPageText"
            android:gravity="center|start"
            android:text="@string/win_rate_this_week"
            />
        <TextView
            android:id="@+id/winrate_weekly_stat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_game_layout_text"
            android:gravity="end|center"
            android:textColor="?attr/colorMainPageText"
            android:textStyle="bold"
            android:padding="@dimen/padding_game_layout_text"/>

    </LinearLayout>
</LinearLayout>